##### Mon 02/07/2012
* Implement the wrapper for Tcl interpreter.

##### Mon 02/07/2012
* Start a new branch "tcl" to replace the command line environment.
* Decide to use c++/tcl to re-implement the command line environment. Exciting!

##### Sun 01/07/2012
* Add short-cut effect to || operation.
* Add is_true(), is_false() and is_x() member function to Number to normalify the boolean check.

##### Sat 30/06/2012
* Add selector validation and select range check in the elaboration of VIdentifier.

##### Fri 29/06/2012
* Considering the range selector when settle resolve a const value from a variable (parameter or genvar).

##### Thu 28/06/2012
* Broadly exchange iterative for loop into BOOST_FOREACH macros.

##### Wed 27/06/2012
* Initialise father of netlist::ConElem to NULL (always forget this, dam!)
* Begin to use new BOOST_FOREACH macro.
* Now unused VIdentifiers will automatically expunge itself.
* Start to use a new branch for developing and only push runnable versions to master.

##### Tue 26/06/2012
* Rename the module name in instances after the module name is re-calculated with parameters.
* Added a write command in avs_shell to write out a design.

##### Mon 25/06/2012
* Modified Makefile so there is no target test.
* Fixed a stupid misuse of reference in netlist::RangeArray::is_declaration(). Reference assign is not pointer assignment!
* Fixed some bugs in case expression check and now consider numbers with x/z as constant and valuable.

##### Fri 22/06/2012
* Fixed some bugs and tried to differentiate empty from full by forcing all maximal range expandation before range 
  operations.
* Find serious flaws in the range operation as it is difficult to differentiate empty ranges from full ranges.

##### Thu 21/06/2012
* Endless debugging for the range operation although no multi-dimension ranges are actually used in OR1200 RTL.
* Deduction of RangeArray is implemented.
